--- a/templates/zabbix_agentd.conf.j2
+++ b/templates/zabbix_agentd.conf.j2
@@ -6,20 +6,20 @@
 ############ GENERAL PARAMETERS #################
 PidFile={{ zabbix_agent__pid_file }}
 
-Include={{ zabbix_agent__conf_include_directory }}{{ '/*.conf' if zabbix_agent__version|version_compare(2.4, '>=') else '' }}
+Include={{ zabbix_agent__conf_include_directory }}{{ '/*.conf' if zabbix_agent__version is version_compare(2.4, '>=') else '' }}
 {% if zabbix_agent__userparameters_directory is defined %}
-Include={{ zabbix_agent__userparameters_directory }}{{ '/*.conf' if zabbix_agent__version|version_compare(2.4, '>=') else '' }}
+Include={{ zabbix_agent__userparameters_directory }}{{ '/*.conf' if zabbix_agent__version is version_compare(2.4, '>=') else '' }}
 {% endif %}
 {% for item in zabbix_agent__conf_includes %}
-Include={{ item if zabbix_agent__version|version_compare(2.4, '>=') else item|replace('/*.conf','') }}
+Include={{ item if zabbix_agent__version is version_compare(2.4, '>=') else item|replace('/*.conf','') }}
 {% endfor %}
 
 AllowRoot=0
-{% if zabbix_agent__version|version_compare(2.4, '>=') %}
+{% if zabbix_agent__version is version_compare(2.4, '>=') %}
 User={{ zabbix_agent__service_user }}
 {% endif %}
 
-{% if zabbix_agent__version|version_compare(3.0, '>=') %}
+{% if zabbix_agent__version is version_compare(3.0, '>=') %}
 LogType={{ zabbix_agent__log_type }}
 {% endif %}
 LogFile={{ zabbix_agent__log_file }}
